--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     
+    <script src="script.js">    </script>
+    <script src="video3.js">    </script>
 
-    <script src="script.js"></script>
 </body>
 </html>
