Javascript kodlarımızın sorunsuz çalışması için bir html sayfası.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     
-    <script src="script.js">    </script>
-    <script src="video3.js">    </script>
- 
+    <!--<script src="script.js">    </script> -->
+    <!-- <script src="video3.js">    </script> -->
+    <!-- <script src="video4.js">    </script> -->
+    <script src="video5.js">    </script> 
+
 </body>
 </html> 
