Javacsript kodlarımızın çalışması için gerekli.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>First App</title>
 </head>
 <body>
-    
-    <!--<script src="script.js">    </script> -->
-    <!-- <script src="video3.js">    </script> -->
-    <!-- <script src="video4.js">    </script> -->
-    <script src="video5.js">    </script> 
+    <input type="color" name="colorpicker" id="colorpicker"><br>
+    <button id="btn" onclick="console.log('Test')">Button</button><br>
+    <button id="btn2" onclick="clickHandle()">Button2</button><br>
+    <button id="dblclick">Dbl click</button><br>
+    <input type="text" name="textt" id="textt"><br> 
 
+    <script src="video22.js">   </script>
 </body>
-</html> 
+</html>
